tests/dataset/tpc-ds/compiler/rust/q68.error
rustc: exit status 1
warning: type `Catalog_sale` should have an upper camel case name
 --> /tmp/q68.rs:3:8
  |
3 | struct Catalog_sale {
  |        ^^^^^^^^^^^^ help: convert the identifier to upper camel case: `CatalogSale`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Store_sale` should have an upper camel case name
 --> /tmp/q68.rs:9:8
  |
9 | struct Store_sale {
  |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `StoreSale`

error[E0277]: cannot add `f64` to `i32`
  --> /tmp/q68.rs:25:198
   |
25 | ...in &store_sales { tmp2.push(s.profit); } tmp2 }) + 30 as f64 as f64 as f64 as f64;
   |                                                     ^ no implementation for `i32 + f64`
   |
   = help: the trait `Add<f64>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error: aborting due to 1 previous error; 2 warnings emitted

For more information about this error, try `rustc --explain E0277`.
